@@ -6,22 +6,23 @@ import com.thoughtworks.xstream.io.xml.DomDriver;
 import java.io.ByteArrayInputStream;
 import java.io.InputStream;
 import java.io.UnsupportedEncodingException;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Type;
 
 public class XStreamUtil {
-    public static <T> T xml2Class(byte[] buf, Class<T> clazz) throws UnsupportedEncodingException, InstantiationException, IllegalAccessException {
+    public static <T> T xml2Class(byte[] buf, Class<T> clazz) throws UnsupportedEncodingException, InstantiationException, IllegalAccessException, NoSuchMethodException, InvocationTargetException {
 //		byte[] buf = str.getBytes("UTF-8");
-        T t = clazz.newInstance();
+        T t = clazz.getDeclaredConstructor().newInstance();
         XStream xStream = new XStream(new DomDriver());
         InputStream in = new ByteArrayInputStream(buf);
         xStream.fromXML(in, t);
         return t;
     }
 
-    public static <T> T xml2Class(byte[] buf, Type typeOfT) throws UnsupportedEncodingException, InstantiationException, IllegalAccessException {
+    public static <T> T xml2Class(byte[] buf, Type typeOfT) throws UnsupportedEncodingException, InstantiationException, IllegalAccessException, NoSuchMethodException, InvocationTargetException {
 //		byte[] buf = str.getBytes("UTF-8");
         Class<T> clazz = (Class) typeOfT;
-        T t = clazz.newInstance();
+        T t = clazz.getDeclaredConstructor().newInstance();
         XStream xStream = new XStream(new DomDriver());
         InputStream in = new ByteArrayInputStream(buf);
         xStream.fromXML(in, t);
